<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mirage"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="bottom|end"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_place_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom|end"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/number_eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result" />

    <TextView
        android:id="@+id/number_two"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_one"
        app:layout_constraintEnd_toStartOf="@+id/number_three"
        app:layout_constraintStart_toEndOf="@+id/number_one"
        app:layout_constraintTop_toTopOf="@+id/number_one" />

    <ImageView
        android:id="@+id/minus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/persian_blue"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/number_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toTopOf="@+id/number_one"
        app:srcCompat="@drawable/ic_minus"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/persian_blue"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/number_one"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/number_three"
        app:layout_constraintTop_toTopOf="@+id/number_one"
        app:srcCompat="@drawable/ic_plus"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/number_three"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_one"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/number_two"
        app:layout_constraintTop_toTopOf="@+id/number_one" />

    <TextView
        android:id="@+id/number_one"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number_zero"
        app:layout_constraintEnd_toStartOf="@+id/number_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_four" />

    <TextView
        android:id="@+id/divide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/persian_blue"
        android:gravity="center"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toTopOf="@+id/number_four" />

    <TextView
        android:id="@+id/number_eight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/eight"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_seven"
        app:layout_constraintEnd_toStartOf="@+id/number_nine"
        app:layout_constraintStart_toEndOf="@+id/number_seven"
        app:layout_constraintTop_toTopOf="@+id/number_seven" />

    <TextView
        android:id="@+id/clear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/elm"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_seven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="@+id/number_seven" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/elm"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/number_seven"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/number_nine"
        app:layout_constraintTop_toTopOf="@+id/number_seven"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/number_seven"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number_four"
        app:layout_constraintEnd_toStartOf="@+id/number_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_place_holder"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/number_nine"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/nine"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_seven"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toEndOf="@+id/number_eight"
        app:layout_constraintTop_toTopOf="@+id/number_seven" />

    <TextView
        android:id="@+id/multiply"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/persian_blue"
        android:gravity="center"
        android:text="@string/multiply"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_four"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintStart_toEndOf="@+id/number_six"
        app:layout_constraintTop_toTopOf="@+id/number_four" />

    <TextView
        android:id="@+id/number_six"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/six"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_four"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/number_five"
        app:layout_constraintTop_toTopOf="@+id/number_four" />

    <TextView
        android:id="@+id/number_four"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/four"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number_one"
        app:layout_constraintEnd_toStartOf="@+id/number_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_seven" />

    <TextView
        android:id="@+id/number_five"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/five"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_four"
        app:layout_constraintEnd_toStartOf="@+id/number_six"
        app:layout_constraintStart_toEndOf="@+id/number_four"
        app:layout_constraintTop_toTopOf="@+id/number_four"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/number_zero"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/number_two"
        app:layout_constraintStart_toStartOf="@+id/number_one"
        app:layout_constraintTop_toBottomOf="@+id/number_one" />

    <TextView
        android:id="@+id/equals"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/elm"
        android:gravity="center"
        android:text="@string/equals"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_zero"
        app:layout_constraintEnd_toEndOf="@+id/minus"
        app:layout_constraintStart_toStartOf="@+id/plus"
        app:layout_constraintTop_toTopOf="@+id/number_zero" />

    <TextView
        android:id="@+id/dot"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_key"
        android:backgroundTint="@color/big_stone"
        android:gravity="center"
        android:text="@string/dot"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_zero"
        app:layout_constraintEnd_toEndOf="@+id/number_three"
        app:layout_constraintStart_toStartOf="@+id/number_three"
        app:layout_constraintTop_toTopOf="@+id/number_zero" />

</androidx.constraintlayout.widget.ConstraintLayout>